syntax = "proto3";

service Sum {
    rpc CalcSum (SumRequest) returns (SumResponse) {
    }
}

message SumRequest {
    sint32 a = 1;
    sint32 b = 2;
}

message SumResponse {
    sint32 result = 1;
}